fixed spacing bugs in about and contact pages in mobile and uncovered the scroll bug for overflow auto on mobile

--- a/src/styles/blogTheme.css
+++ b/src/styles/blogTheme.css
@@ -46,7 +46,7 @@ pre {
 .post-template li {
   padding: calc(var(--size-500) * 0.1) 0;
 }
-p {
+.post-template p {
   padding: calc(var(--size-500) * 0.5) 0;
 }
 
